[package]
name = "verstatus"
version = "0.1.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2021"
description = "Desktop status bar client for i3bar and swaybar"
license = "0BSD"
homepage = "https://github.com/stephaneyfx/verstatus"
repository = "https://github.com/stephaneyfx/verstatus.git"
keywords = ["status", "bar", "i3bar", "i3"]

[dependencies]
brightness = "0.5.0"
chrono = "0.4.22"
desktus = { git = "https://github.com/stephaneyfx/desktus.git", branch = "master" }
futures = "0.3.24"
futuristic = "0.4.0"
palette = "0.6.1"
serde = { version = "1.0.144", features = ["derive"] }
sysinfo = "0.26.2"
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = { version = "0.1.10", features = ["io-util", "sync", "time"] }
